src/objects/RnO_Automation_Transaction_Log__c/RnO_Automation_Transaction_Log__c.object-meta.xml
<CustomObject>
    <description>Custom Object that mimics a  system log of R&amp;O Automation Service. Captures, Time, Status, Description, Sales Order Number and Case Number for each transaction</description>
    <label>RnO Automation Transaction  Log</label>
    <nameField>
        <label>RnO Automation Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RnO Automation Transaction  Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>