src/objects/RnO_Automation_Transaction_Log__c/fields/Case_Num__c.field-meta.xml
<CustomField>
    <fullName>Case_Num__c</fullName>
    <description>Corresponding Case Number for the Sales Order Number from SAP, if Case is successfully created</description>
    <label>Case Num</label>
    <length>50</length>
    <type>Text</type>
</CustomField>