src/objects/RnO_Automation_Transaction_Log__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the SAP Transaction. Error or Exception message</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>