src/objects/RnO_Automation_Transaction_Log__c/fields/Order_Entered_By__c.field-meta.xml
<CustomField>
    <fullName>Order_Entered_By__c</fullName>
    <description>Created for Effortless Orders Project 14-043</description>
    <label>Order Entered By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>