src/objects/RnO_Automation_Transaction_Log__c/fields/Sales_Order_Num__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Num__c</fullName>
    <description>Sales Order Number from SAP</description>
    <label>Sales Order Num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>