src/objects/RnO_Automation_Transaction_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the transaction. Success or Failure</description>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>