src/objects/RnO_Automation_Transaction_Log__c/fields/XML_Request__c.field-meta.xml
<CustomField>
    <fullName>XML_Request__c</fullName>
    <description>This is field stores the XML data that was sent from SAP per transaction.</description>
    <label>XML Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>