src/objects/RnO_Automation_Transaction_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Case_Num__c</columns>
    <columns>Sales_Order_Num__c</columns>
    <columns>Status__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Description__c</columns>
    <columns>Transaction_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>