src/objects/RnO_Automation_Transaction_Log__c/listViews/R_O_Orders_Transaction_Log.listView-meta.xml
<ListView>
    <fullName>R_O_Orders_Transaction_Log</fullName>
    <columns>NAME</columns>
    <columns>Case_Num__c</columns>
    <columns>Sales_Order_Num__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Transaction_Time__c</columns>
    <columns>XML_Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>R &amp; O Orders Transaction Log</label>
    <language>en_US</language>
</ListView>